# pykworldsim

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_simulation.py  config.yaml  plugin_example.py  social_simulation.py
pykworldsim/: __init__.py  cli.py  event.py  goal.py  job.py  location.py  person.py  relationship.py  report.py  world.py
pykworldsim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pykworldsim/core/: __init__.py  entity.py  events.py  query.py  simulation.py  world.py
pykworldsim/core/components/: __init__.py  event.py  event_component.py  goal.py  job.py  location.py  person.py  position.py  relationship.py  velocity.py
pykworldsim/core/config/: __init__.py  loader.py
pykworldsim/core/systems/: __init__.py  base_system.py  event.py  event_system.py  movement.py  physics.py  social.py
pykworldsim/plugins/: __init__.py  registry.py
pykworldsim/utils/: __init__.py  logging.py
tests/: conftest.py  test_components.py  test_entity.py  test_events.py  test_plugins.py  test_query.py  test_save_load.py  test_simulation.py  test_systems.py  test_world.py
