[project]
name = "pykworldsim"
version = "0.1.0"
description = "A python library that simulates a world with people, relationships, and cities"
authors = [
    {name = "Kairav Dutta", email = "kairavdutta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

license = { file = "LICENSE" }

keywords = ["simulation", "world", "ai", "people", "relationships"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yourusername/pykworldsim"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]